Made the menu nav bar responsive for smaller screens; added additional media width condition for screens below <400px to ensure the menu nav links align correctly

--- a/css/menu.css
+++ b/css/menu.css
@@ -1,23 +1,23 @@
 .menu-item {
     overflow: hidden;
-  } 
-  
-  .menu-link,
-  .menu-effect:hover {
-    /*color: inherit;
-    transform: scale(1.1);
-    transform-origin: center;
-    text-decoration: underline;
-    text-underline-offset: 0.5rem;
-    text-decoration-color: #145a32; */
+  }
+
+  .menu-link {
+      font-weight: bold;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+  }
+
+  .menu-link:hover {
     opacity: 0.8;
     transition: transform 0.3s ease, opacity 0.3s ease;
   }
-  
-  .menu-effect.active {
-    border: none;
-    box-shadow: 0px 1px 0px white;
+
+  @media (max-width: 400px) {
+    .menu-link {
+      font-size: 13px !important;
+    }
   }
+
 
   @media(max-width: 768px) {
     .menu-card {
@@ -30,3 +30,9 @@
       margin-left: 0 !important;
     }
   }
+
+  /*@media(max-width: 1400px) {
+    #menu-container {
+      width: 50% !important;
+    }
+  }*/
